--- a/calico-cloud_versioned_docs/version-3.17/visibility/elastic/archive-storage.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/visibility/elastic/archive-storage.mdx
@@ -24,6 +24,10 @@ This how-to guide uses the following {{prodname}} features:
 
 ## How to
 
+:::note
+Because {{prodname}} and Kubernetes logs are integral to {{prodname}} diagnostics, there is no mechanism to tune down the verbosity. To manage log verbosity, filter logs using your SIEM.
+:::
+
 <Tabs>
 <TabItem label="Amazon S3" value="Amazon S3-0">
 
