--- a/calico/getting-started/kubernetes/kind.mdx
+++ b/calico/getting-started/kubernetes/kind.mdx
@@ -36,6 +36,8 @@ KIND ships with a simple networking implementation ("kindnetd") based around sta
 
 Kind cluster creation can be modified by [configuration file](https://kind.sigs.k8s.io/docs/user/quick-start/#creating-a-cluster). Here you are providing kind configuration in order to disable simple networking implementation (default CNI) and change the pod ip CIDR.
 
+1. Disable the default CNI in order to use Calico CNI by running the following command:
+
 ```bash
 cat > values.yaml <<EOF
 kind: Cluster
@@ -50,13 +52,13 @@ networking:
 EOF
 ```
 
-Start your Kind cluster with one control plane and two worker nodes using the following command.
+2. Start your Kind cluster with one control plane and two worker nodes by running the following command:
 
 ```bash
-kind create cluster --config kind.yaml --name dev
+kind create cluster --config values.yaml --name dev
 ```
 
-Confirm that you now have three nodes in your cluster with the following command.
+3. Confirm that you now have three nodes in your cluster by runnibng the following command:
 
 ```bash
 kubectl get nodes -o wide
@@ -76,19 +78,13 @@ dev-worker2         Ready    <none>          4m   v1.25.0   172.18.0.3    <none>
    <Tabs>
 <TabItem label="Operator" value="Operator-0">
 
-Install the {{prodname}} operator and custom resource definitions.
+1. Install the {{prodname}} operator and custom resource definitions.
 
 ```bash
 kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
 ```
 
-:::note
-
-Due to the large size of the CRD bundle, `kubectl apply` might exceed request limits. Instead, use `kubectl create` or `kubectl replace`.
-
-:::
-
-Install {{prodname}} by creating the necessary custom resource. For more information on configuration options available in this manifest, see [the installation reference](../../reference/installation/api.mdx).
+2. Install {{prodname}} by creating the necessary custom resource. For more information on configuration options available in this manifest, see [the installation reference](../../reference/installation/api.mdx).
 
 :::note
 
@@ -109,6 +105,11 @@ Install {{prodname}} by using the following command.
 ```bash
 kubectl apply -f {{manifestsUrl}}/manifests/calico.yaml
 ```
+:::note
+
+Due to the large size of the CRD bundle, `kubectl apply` might exceed request limits. Instead, use `kubectl create` or `kubectl replace`.
+
+:::
 
 :::note
 
