--- a/calico-cloud_versioned_docs/version-3.17/image-assurance/understanding-scan-results.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/image-assurance/understanding-scan-results.mdx
@@ -2,111 +2,99 @@
 description: Understand scan results in Manager UI.
 ---
 
-# Understand scan results in Manager UI
+# Understand image scan results in Manager UI
 
-In the left navbar in Manager UI, click **Image Assurance**, **Scan Results**.
+This article provides help using Image Assurance in Manager UI:
 
-**Scan Results tab**
+- [All Scanned Images dashboard](#all-scanned-images-dashboard)
+  - [Scan settings](#scan-settings)
+  - [Exclude specific vulnerabilities](#exclude-specific-vulnerabilities)
+  - [Export scan results](#export-scan-results)
+  - [Troubleshooting](#troubleshooting)
+- [Running images](#running-images-tab)
 
-The left panel lists scanned images (assuming you set up the CLI scanner to report scan results to {{prodname}}).
+- [Vulnerability Exceptions dashboard](#vulnerability-exceptions)
 
-The right pane lists:
+## All Scanned Images dashboard
 
-- Number of images grouped by Fail, Warn, Pass, and Unknown (the CLI scanner has not yet reported results)
-- High Risk Repos (top five repos based on total Fails)
-- Image details (when you have an image selected from the left panel list) lists associated CVEs, if any
-    - For each CVE listed, you can view the details of the vulnerability or add an exception to ignore the vulnerability (see [Create vulnerability exceptions](#create-vulnerability-exceptions)). 
+In the left navbar in Manager UI, click **Image Assurance**, **All Scanned Images**.
 
-**Runtime tab**
+This dashboard lets you:
+- View results of image scanning and assess vulnerabilities prior to runtime
+- View running images in your cluster and remediate CVEs
 
-The left panel lists images running in your cluster. Because you can see the CVEs associated with running pods, you can assess pod vulnerability. The columns, **Clusters** and **Running Instances**, show the number of running instances in clusters that are connected to {{prodname}}.
+### Scan results tab
 
-The right panel lists:
+In this panel, you can:
 
-- Number of running pods that have images with scan results of Fail, Warn, Pass, and Unknown (the CLI scanner has not yet reported results)
-- High Risk Namespaces (top five namespaces based on total Fails)
-- Runtime details (when you have an image selected from the left panel list) shows the clusters and namespaces the selected image is running in
+- View all scanned images for CVEs and remediate prior to run time
+- Change default scan settings
+- Exclude vulnerabilities from scan results
 
-:::note
+### Scan results tab
 
-In the Scan Results and Runtime tabs, the **Registry path** field may be blank if {{prodname}} cannot access this metadata. For example, images from Docker Hub do not specify the registry in the image metadata.
+Scan results for Image Assurance is based on the Common Vulnerability Scoring System v3 (CVSS Scores). The default Pass, Warn, and Fail values will work for the majority of {{prodname}} deployments. However, you may need to change the defaults because of security requirements.
 
-:::
+| CVSS v3 scores                              | Image Assurance mapping and defaults | Default settings     |
+|---------------------------------------------|--------------------------------------|----------------------|
+| 0.0 – (None)<br />0.1 – 3.9 (Low)           | Pass = < 3.8                         | Low                  |
+| 4.0 – 6.9 (Medium)                          | Warn = 3.9                           | Medium severity – 7  |
+| 7.0 – 8.9 (High)<br />9.0 – 10.0 (Critical) | Fail = 7.0                           | Critical or high – 8 |
 
-**How Pass, Warn, and Fail scores map to CVSS scores**
 
-{{prodname}} image scoring is based on the Common Vulnerability Scoring System v3 (CVSS Scores).
-You can change the CVSS score threshold between a Pass and a Warn, and between a Warn and a Fail. Currently, only [CVSS v3 scores](https://nvd.nist.gov/vuln-metrics/cvss/v3-calculator) are displayed. CVEs that do not have a CVSS v3 score (too old to have one, or are too new to be assigned one), display a blank score in the UI, and **N/A** in the CLI.
+**Changing the CVSS thresholds**
 
-| CVSS v3 scores                              | Image Assurance mapping | Default settings     |
-| ------------------------------------------- | ----------------------- | -------------------- |
-| 0.0 – (None)<br />0.1 – 3.9 (Low)           | Pass = 3.9              | Low                  |
-| 4.0 – 6.9 (Medium)                          | Warn = 7                | Medium severity – 7  |
-| 7.0 – 8.9 (High)<br />9.0 – 10.0 (Critical) | Fail = 8.0              | Critical or high – 8 |
+On the right panel, click the **Settings** icon. When changing the CVSS threshold values, note the following:
+- Changes to values take effect immediately, and alter the scan results for images already in the system
+- If you are using admission controller policies, changing a value may allow pods in your Kubernetes cluster that were previously blocked, to now be deployed or vice versa.
 
-**Changing the default CVSS threshold values**
+**Why do I have images with `unknown` results**?
 
-The default threshold values (shown below) will work for the majority of {{prodname}} deployments. However, you may need to change the defaults because of security requirements.
+If scan results contain `unknowns` it can mean:
+- The Image Assurance scanner is not enabled and running
+- The scanner has not yet reported results yet
 
-![scan-settings](/img/calico-cloud/scan-settings.png)
+**How long does it take for scan results?**
 
-To change the CVSS threshold values, note the following:
+Anywhere from 2-10 minutes. The variability occurs because the scanner watches, reports, and then sleeps to balance efficiency and resources.
 
-- Changes to threshold values take effect immediately and alter the scan results for images already in the system
-- If you are using admission controller policies, changing a value may allow pods in your Kubernetes cluster that were previously being blocked, to now be deployed or vice versa.
+**What is Download Scanner?**
 
-**Enable Runtime View**
+This link goes to steps to integrate the Image Assurance scanner as part of your build pipeline. If you want to scan images only in your Kubernetes cluster, see [Enable automatic scanning inside a cluster](./scanners/cluster-scanner).
 
-You can configure your scan settings to directly monitor pods that are running in your Kubernetes clusters.
-When enabled, Runtime View checks image information from the active container images in all of your connected clusters.
-These images are correlated with the images you have recorded in the Image Assurance system.
+### Scan settings panel
 
-To enable Runtime View, select the **Enable Runtime View** checkbox in the **Scan Results** tab.
-You can clear the checkbox to disable Runtime View.
-After disabling Runtime View, some runtime information for existing images will remain in the system.
+**What is the Enable Runtime View checkbox?**
 
-:::note
+Runtime view allows you to view vulnerable images that are running in your cluster. You can then remediate the vulnerabilities using the CVSS scores as a guideline to triage CVEs.
 
-If your cluster does not use the default containerd socket path (`/run/containerd/containerd.sock`), then you must change the path to allow the Runtime View service to collect image information.
+If you disable Runtime View, some runtime information for existing images will remain in the system.
 
-To update the CRI socket path for a cluster, run the following command:
+**What are the `API URL` and `API Token` fields used for?**
 
-```bash
-kubectl patch imageassurance default --type='merge' -p '{"spec":{"criSocketPath":"<path-to-cri-socket>"}}'
-```
-See [the installation reference](../reference/installation/api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec) for more details on the ImageAssurance CR.
-
-:::
+They are used to authenticate the connection to the Image Assurance scanner if you have integrated Image Assurance scanner in your build pipeline.
 
 ### Exclude specific vulnerabilities
 
 In some cases, you may want to exclude specific vulnerabilities from your scan results. For example, you may determine that a warning is a false positive because of the way you are using an affected package. By creating a vulnerability exception, you can configure Image Assurance to ignore a CVE for a specific image, all images from the same repo, or for all images.
 
+1. Go to **Image Assurance**, **All Scanned Images**. 
+2. Select an image from the list.
+3. On the details page for that image, find the CVE, and click **Actions**, **Add Exception**.
+4. From the **Add Exception** dialog, select a scope, add a description, and click **Save**. The new vulnerability exception is immediately applied to your scan results.
+5. To view all vulnerability exceptions, go to: **Image Assurance**, **Vulnerability Exceptions**.
+
 :::caution 
-A vulnerability exception can significantly change how Image Assurance determines image health. 
-- **Maximum CVSS score** 
-An image’s maximum CVSS score may be reduced to a lower score. An exception could eliminate the vulnerability with the highest CVSS score for an image. 
-- **Scan results** 
-Scan results for Pass/Warn/Fail could change because they are based on the maximum CVSS score. For example, Fail could change to Warn, and Warn could change to Pass. 
-- **Vulnerability global alerts** 
-Alerts may no longer be triggered. Alerts are triggered based on scan results or maximum CVSS score values of images. 
-- **Admission controller** 
-Pods could be created where they were previously blocked. Admission controller policies are based on vulnerability information (scan result and/or maximum CVSS score). 
+Adding a vulnerability exception can significantly change how Image Assurance determines image health. 
+- **Maximum CVSS score** - an image’s maximum CVSS score may be reduced to a lower score. An exception could eliminate the vulnerability with the highest CVSS score for an image. 
+- **Scan results** - scan results for /Pass/Warn/Fail could change because they are based on the maximum CVSS score. For example, Fail could change to Warn, and Warn could change to Pass. 
+- **Vulnerability global alerts** - alerts may no longer be triggered. Alerts are triggered based on scan results or maximum CVSS score values of images. 
+- **Admission controller** - pods could be created where they were previously blocked. Admission controller policies are based on vulnerability information (scan result and/or maximum CVSS score). 
 :::
-
-1. Go to **Image Assurance** > **Scan Results**. 
-2. Select an image from the list. On the **Scan Results** page for that image, find the CVE, and click **Actions** > **Add Exception**. 
-3. From the **Add Exception** dialog, select a scope, add a description, and click **Save**. The new vulnerability exception is immediately applied to your scan results.
-
-To view your existing vulnerability exceptions, navigate to the Exceptions page, by going to **Image Assurance** > **Vulnerability Exceptions**.
 
 ### Export scan results
 
-To export the scan results for images you have scanned and uploaded to Image Assurance:
-
-On the Scan Results or Runtime tab of the Manager UI, click **Export**.
-
-The export generates a CSV file with image and CVE metadata for the current list of images you have selected (based on your current filter options). Options include:
+You can export scan results either from **All Scanned Images** tab or the **Running images** tab. The export generates a CSV file with image and CVE metadata for the current list of images you have selected (based on your current filter options). Options include:
 
 - **Export one row for each image and CVE ID** exports a unique image + CVE combination for each row. For example, if an image has 10 CVEs, 10 rows are created (1 for each CVE).
 - **Export one row per image** exports one row for each image, with all associated CVEs condensed into a single column.
@@ -118,8 +106,33 @@ Images with no associated CVEs are not included in the exported data (regardless
 
 :::
 
+### Running Images tab
+
+This tab shows CVEs associated with running pods in your cluster so you can assess pod vulnerability and remediate.For example, you can see image exposure by viewing the  **Clusters** and **Running Instances** columns that show the number of running instances in clusters that are connected to {{prodname}}.
+
+### Troubleshooting 
+
+#### No results in the Running Images tab
+
+- The Image Assurance may not be enabled and running
+- If you integrated the Image Assurance scanner into your build pipeline, and you are not using the default you may containerd socket path (`/run/containerd/containerd.sock`), image information won't be available. To update the CRI socket path for a cluster, run the following command:
+
+   ```bash
+   kubectl patch imageassurance default --type='merge' -p '{"spec":{"criSocketPath":"<path-to-cri-socket>"}}'
+   ```
+   See [the installation reference](../reference/installation/api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec) for more details on the ImageAssurance CR.
+
+#### Registry path field is blank in the All Scanned Images dashboard
+
+If this field is blank, it means that {{prodname}} cannot access the metadata. For example, images from Docker Hub do not specify the registry in the image metadata.
+
+## Vulnerability exceptions dashboard
+
+In the left navbar in Manager UI, click **Image Assurance**, **Vulnerability Exceptions**.
+
+This panel displays vulnerabilities that you've excluded from your scan results (created in the All Scanned Images dashboard).
+
 ## Next steps
 
 - [Set up alerts on vulnerabilities](set-up-alerts.mdx)
-
 - Create [policy](install-the-admission-controller.mdx) to block vulnerable containers from deploying to your cluster
