--- a/calico_versioned_docs/version-3.25/getting-started/kubernetes/self-managed-onprem/onpremises.mdx
+++ b/calico_versioned_docs/version-3.25/getting-started/kubernetes/self-managed-onprem/onpremises.mdx
@@ -40,7 +40,7 @@ installed directly on the cluster as a Deployment, and is configured through one
 <Tabs>
 <TabItem label="Operator" value="Operator-0">
 
-1. First, install the operator on your cluster.
+1. Install the operator on your cluster.
 
    ```bash
    kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
@@ -58,6 +58,17 @@ installed directly on the cluster as a Deployment, and is configured through one
 
    ```bash
    kubectl create -f custom-resources.yaml
+   ```
+1. Verify {{prodname}} installation in your cluster.
+
+   ```
+   watch kubectl get pods -n calico-system
+   ```
+   You should see a result similar to the below.
+
+   ```
+   NAMESPACE     NAME                READY   STATUS                  RESTARTS         AGE
+   kube-system   calico-node-txngh   1/1     Running                   0              54s
    ```
 
 <GeekDetails
