--- a/calico-enterprise/network-policy/recommendations/policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/recommendations/policy-recommendations.mdx
@@ -138,6 +138,10 @@ If any flow to a private network in your cluster is found, a private rule is aut
 **Notes**:
 Exclude any CIDR ranges used by the cluster for nodes and pods.
 
+### Why are egress-to-domain rules being generated for a namespaced service?
+
+Namespaced services with local cluster domains will only generate rules for the service’s namespace. However, if your cluster is a managed cluster instance in an MCM environment, you may also get egress-to-domain rules if the service name suffix isn't the default (svc.cluster.local). It is valid to have a policy with both egress-to-domain and egress-to-namespaces rules that allow the same traffic.
+
 ### Troubleshoot policy recommendations
 
 To view policy-recommendation logs:
