--- a/calico-enterprise/network-policy/recommendations/learn-about-policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/recommendations/learn-about-policy-recommendations.mdx
@@ -18,9 +18,13 @@ kubectl patch felixconfiguration.p default -p '{"spec":{"flowLogsFlushInterval":
 
 ### Apply the tutorial YAML, creating the necessary resources
 
-```bash
-kubectl create -f {{tutorialFilesURL}}/policy-recommendation-deployments.yaml
-```
+1. Download the [`policy-recommendation-deployments.yaml` manifest]({{tutorialFilesURL}}/policy-recommendation-deployments.yaml).
+
+1. Use the following command to install the bindings:
+
+   ```bash
+   kubectl apply -f policy-recommendation-deployments.yaml
+   ```
 
 ### Enable Policy Recommendation
 
