--- a/calico-enterprise_versioned_docs/version-3.17/threat/web-application-firewall.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/threat/web-application-firewall.mdx
@@ -166,13 +166,7 @@ spec:
 ```
 Apply the YAML to your cluster using: `kubectl apply -f test-demo-alert.yaml`
 
-Now if a SQL Injection attack is detected for rule ID 942100, you will see the global alert in Manager UI, Activity, Alerts.
-
-<img
-  src='/img/calico-enterprise/waf-alert.png'
-  alt='WAF alert'
-  width='600'
-/>
+If a SQL Injection attack is detected for rule ID 942100, you will see a security event in the dashboard here: **Threat defense**, **Security Events**.
 
 ### Manage WAF
 
