--- a/calico-enterprise/threat/web-application-firewall.mdx
+++ b/calico-enterprise/threat/web-application-firewall.mdx
@@ -132,11 +132,16 @@ In Service Graph, go to the service and click the HTTP tab. You will see the fol
   level=warning msg="WAF Process Http Request [2f435aca-4a3e-4f96-a7b2-a60c9745bd7b] URL '/test/artists.php?artist=0+div+1+union%23foo*%2F*bar%0D%0Aselect%23foo%0D%0A1%2C2%2Ccurrent_user' OWASP Warning'[2] Host:'10.224.0.38' File:'/etc/modsecurity-ruleset/REQUEST-942-APPLICATION-ATTACK-SQLI.conf' Line:'45' ID:'942100' Data:'' Severity:'0' Version:'OWASP_CRS/3.3.2' Message:'Warning. detected SQLi using libinjection.''"
 ```
 
+#### Threat defense
+
+To view WAF events in a centralized security events dashboard, go to: **Threat defense**, **Security Events**. For help see, [security-event-management](./security-event-management).
+
 #### Kibana
 
 To view WAF events In Kibana:
 
 1. Create the `tigera_secure_ee_waf*` index pattern. For help with index patterns, see [Kibana index pattern](../visibility/kibana.mdx).
+
 2. Select the `tigera_secure_ee_waf*` index pattern. 
 
 You should see the relevant WAF assessment from your request.
@@ -166,13 +171,7 @@ spec:
 ```
 Apply the YAML to your cluster using: `kubectl apply -f test-demo-alert.yaml`
 
-Now if a SQL Injection attack is detected for rule ID 942100, you will see the global alert in Manager UI, Activity, Alerts.
-
-<img
-  src='/img/calico-enterprise/waf-alert.png'
-  alt='WAF alert'
-  width='600'
-/>
+If a SQL Injection attack is detected for rule ID 942100, you will see a security event in the dashboard here: **Threat defense**, **Security Events**.
 
 ### Manage WAF
 
@@ -304,14 +303,14 @@ spec:
 
   ```bash
      kubectl annotate svc <service-name> -n <service-namespace> projectcalico.org/l7-logging-
-  ``
+  ```
 
 #### Disable WAF for a service
 
 To disable WAF on a service, use the Actions menu on the WAF board, or use the following command:
 
-```
-kubectl annotate svc <service-name> -n <service-namespace> projectcalico.org/l7-logging-
+```bash
+   kubectl annotate svc <service-name> -n <service-namespace> projectcalico.org/l7-logging-
 ```
 
 #### Disable WAF feature
