TSLA-4703 docs: update predefined roles matrix - add threat feeds

--- a/calico-cloud/users/user-management.mdx
+++ b/calico-cloud/users/user-management.mdx
@@ -29,6 +29,7 @@ This table describes what level of access each predefined role has for features 
 | _Image Assurance_                     | view, edit | view, edit |   -    | view, edit | view, edit |     -      |      -       |     view, edit      |
 | _Manage Team_                         | view, edit | view, edit |  view  |    view    |    view    |     -      |      -       |          -          |
 | _Usage Metrics_                       |    view    |     -      |   -    |     -      |     -      |     -      |     view     |          -          |
+| _Threat Feeds_                        | view, edit | view, edit |  view  | view, edit | view, edit |     -      |      -       |          -          |
 | _Web Application Firewall_            | view, edit | view, edit |  view  |    view    | view, edit |     -      |      -       |          -          |
 | _Container Threat Detection_          | view, edit | view, edit |  view  |    view    | view, edit |     -      |      -       |          -          |
 
@@ -56,6 +57,6 @@ Add the following Microsoft Graph API delegated permissions:
 - Directory.Read.All
 - User.Read
 - OpenId permissions:
-  - email
-  - openid
-  - profile
+- email
+- openid
+- profile
