[CODE REVIEW] Update command to match the next kubectl apply and update cloud docs

--- a/calico-cloud/compliance/compliance-reports-cis.mdx
+++ b/calico-cloud/compliance/compliance-reports-cis.mdx
@@ -145,7 +145,7 @@ To manually run a report:
    **Operator**
 
    ```bash
-   curl -O {{filesUrl_CE}}/manifests/compliance-reporter-pod.yaml
+   curl {{filesUrl_CE}}/manifests/compliance-reporter-pod-managed.yaml -o compliance-reporter-pod.yaml
    ```
 
 1. Edit the template as follows:
