--- a/calico-enterprise/compliance/compliance-reports-cis.mdx
+++ b/calico-enterprise/compliance/compliance-reports-cis.mdx
@@ -144,9 +144,18 @@ To manually run a report:
 1. Download the pod template corresponding to your installation method.  
    **Operator**
 
+   For management and standalone clusters:
+
    ```bash
    curl -O {{filesUrl}}/manifests/compliance-reporter-pod.yaml
    ```
+
+   For managed clusters:
+
+   ```bash
+   curl {{filesUrl}}/manifests/compliance-reporter-pod-managed.yaml -o compliance-reporter-pod.yaml
+   ```
+
 
 1. Edit the template as follows:
 
