--- a/calico-enterprise/compliance/overview.mdx
+++ b/calico-enterprise/compliance/overview.mdx
@@ -346,7 +346,7 @@ To run a report on demand:
    For managed clusters:
 
    ```bash
-   curl -O {{filesUrl}}/manifests/compliance-reporter-pod-managed.yaml
+   curl {{filesUrl}}/manifests/compliance-reporter-pod-managed.yaml -o compliance-reporter-pod.yaml
    ```
 
 1. Edit the template as follows:
