--- a/calico-cloud/compliance/overview.mdx
+++ b/calico-cloud/compliance/overview.mdx
@@ -338,7 +338,7 @@ To run a report on demand:
 1. Download the pod template corresponding to your installation method.
 
    ```bash
-   curl -O {{filesUrl_CE}}/manifests/compliance-reporter-pod.yaml
+   curl {{filesUrl_CE}}/manifests/compliance-reporter-pod-managed.yaml -o compliance-reporter-pod.yaml
    ```
 
 1. Edit the template as follows:
