Fixes after @girishshankaran and @electricjesus review

--- a/calico-enterprise/threat/web-application-firewall.mdx
+++ b/calico-enterprise/threat/web-application-firewall.mdx
@@ -185,7 +185,7 @@ you must edit the modsecurity rules.
 
 For example, if you want to allow traffic, do the following steps:
 
-1. Change the disruptive action, on file `RESPONSE-999-EXCLUSION-RULES-AFTER-CRS.conf.example` section `'Changing the Disruptive Action for Anomaly Mode'`.
+1. Anomaly scores could result in Disruptive action. To change the disruption action, see the file `RESPONSE-999-EXCLUSION-RULES-AFTER-CRS.conf.example` section `'Changing the Disruptive Action for Anomaly Mode'`.
 
 Append the lines
 
@@ -274,9 +274,9 @@ curl -O https://raw.githubusercontent.com/lsgroup/SmartReverseProxy/master/modse
 curl https://raw.githubusercontent.com/coreruleset/coreruleset/v3.3/dev/crs-setup.conf.example > crs-setup.conf
 ```
 
-3. Do your customized settings on the default files, probably on the `.example` files and after renaming, like previously on this doc.
+3. If you wish to customize settings on default included rules, please see `.example` files for guidance. You must save these files without the .example extension if you wish for these changes to take effect.
 
-4. Still at the my-ruleset folder where your core rules set files live. Create a configMap containing all the files downloaded into your new directory and replace the existing rule set with it:
+4. Go to my-ruleset folder where your core rules set files are located, create a ConfigMap containing all the files downloaded into your new directory and replace the existing rule set with it.
 
 
 ```bash
