DOCS-Windows-policy-recommendations

--- a/calico-enterprise/network-policy/recommendations/policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/recommendations/policy-recommendations.mdx
@@ -16,6 +16,9 @@ One of the best practices for improving the security posture of your Kubernetes 
 
 ## Before you begin
 
+**Unsupported**
+- Windows nodes
+
 **Required RBAC**
 
 To enable/disable and use policy recommendations, you must have the **tigera-network-admin** role or permissions to the **update**, **patch**, **get**, **list**, **watch** `projectcalico.org` resources:
