--- a/calico-enterprise_versioned_docs/version-3.17/network-policy/recommendations/policy-recommendations.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/network-policy/recommendations/policy-recommendations.mdx
@@ -16,6 +16,9 @@ One of the best practices for improving the security posture of your Kubernetes 
 
 ## Before you begin
 
+**Unsupported**
+- Windows nodes
+
 **Required RBAC**
 
 To enable/disable and use policy recommendations, you must have the **tigera-network-admin** role or permissions to the **update**, **patch**, **get**, **list**, **watch** `projectcalico.org` resources:
