--- a/calico-cloud_versioned_docs/version-3.16/network-policy/beginners/calico-network-policy.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/network-policy/beginners/calico-network-policy.mdx
@@ -131,7 +131,7 @@ spec:
           - 6379
 ```
 
-To allow ingress traffic from endpoints in other namespaces, use a **namespaceSelector** in the policy rule. A namespaceSelector matches namespaces based on the labels that are applied in the namespace. In the following example, ingress traffic is also allowed from endpoints in namespaces that match **shape == circle**.
+To allow ingress traffic from endpoints in other namespaces, use a **namespaceSelector** in the policy rule. A namespaceSelector matches namespaces based on the labels that are applied in the namespace. In the following example, ingress traffic is allowed from endpoints in namespaces that match **shape == circle**.
 
 ```yaml
 apiVersion: projectcalico.org/v3
