--- a/calico-cloud/about/product-comparison.mdx
+++ b/calico-cloud/about/product-comparison.mdx
@@ -5,7 +5,7 @@ description: Describes Tigera products and provides a feature comparison table.
 # Tigera product comparison
 
 ## Calico Open Source
-The base product that comprises both Calico Enterprise and Calico Cloud. It provides the core networking and network policy features.
+THE base product that comprises both Calico Enterprise and Calico Cloud. It provides the core networking and network policy features.
 
 ![calico-open-source](/img/calico/calico-open-source.svg)
 
