--- a/calico-enterprise_versioned_docs/version-3.17/network-policy/recommendations/learn-about-policy-recommendations.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/network-policy/recommendations/learn-about-policy-recommendations.mdx
@@ -6,19 +6,19 @@ description: Policy recommendations tutorial.
 
 ## Big picture
 
-In this tutorial, we show you how recommendations are generated using flow logs in your cluster, for traffic to/from namespaces, network sets, private network IPs and public domains.
+In this tutorial, we show you how recommendations are generated using flow logs in your cluster for traffic to/from namespaces, network sets, private network IPs and public domains.
 
-### Configure felix for fast flow logs collection
-
-```bash
-kubectl patch felixconfiguration.p default -p '{"spec":{"flowLogsFlushInterval":"10s"}}'
-```
-
-### Apply the tutorial YAML, creating the necessary resources
+### Create resources for the tutorial
 
 Because the policy recommendation feature requires traffic between endpoints, this step provides these resources for this hands-on tutorial. If your cluster is already generating traffic for policy recommendations, you can skip this step and follow along using your own cluster.
 
-1. Download the [`policy-recommendation-deployments.yaml` manifest]({{tutorialFilesURL}}/policy-recommendation-deployments.yaml).
+1. Configure felix for fast flow logs collection
+
+   ```bash
+   kubectl patch felixconfiguration.p default -p '{"spec":{"flowLogsFlushInterval":"10s"}}'
+   ```
+
+1. Download the tutorial YAML, creating the necessary resources [`policy-recommendation-deployments.yaml` manifest]({{tutorialFilesURL}}/policy-recommendation-deployments.yaml).
 
 1. Use the following command to install the bindings:
 
@@ -26,7 +26,7 @@ Because the policy recommendation feature requires traffic between endpoints, th
    kubectl apply -f policy-recommendation-deployments.yaml
    ```
 
-### Enable Policy Recommendation
+### Enable policy recommendation
 
 1. In the Manager UI left navbar, click the **Policies** icon.
 1. Select **Recommendations**.
@@ -99,9 +99,9 @@ To view flow logs in Service Graph:
 1. Select **Default** under the VIEWS option.
 1. In the bottom pane you will see flow logs in the Flows tab.
 
-### Understand the flow logs used in policy recommendations
-
 To generate rules, the recommendation engine queries for flow logs that are not addressed by any other policy in the cluster. Subsequently, it builds the missing policies necessary for allowing that traffic.
+
+### Understand the flow logs used in policy recommendations
 
 To get a better understanding of which flows contributed to generating the rules in your policy, select **Filter Flows**
 
