--- a/calico-enterprise/threat/web-application-firewall.mdx
+++ b/calico-enterprise/threat/web-application-firewall.mdx
@@ -94,7 +94,7 @@ kubectl patch felixconfiguration default --type='merge' -p '{"spec":{"policySync
 2. Select the services you want WAF to inspect, and then click **Confirm Selections**.
     
    <img
-    src='/img/calico-enterprise/waf-select-services-CE3.17-CC-3.16.png'
+    src='/img/calico-enterprise/waf-select-services-3.17.png'
     alt='WAF services'
     width='600'
   />
