Fixes after @girishshankaran review

--- a/calico-enterprise/threat/web-application-firewall.mdx
+++ b/calico-enterprise/threat/web-application-firewall.mdx
@@ -259,7 +259,7 @@ rm crs.zip
 
 2. Download bootstrap files.
 
-  Download the following required bootstrapping configuration files [Reference](https://medium.com/lightbaseio/web-application-firewall-in-go-feat-owasp-modsecurity-core-rule-set-3f97a26e3311) that are used by Tigera operator:
+  Download the following required bootstrapping configuration files from this [site](https://medium.com/lightbaseio/web-application-firewall-in-go-feat-owasp-modsecurity-core-rule-set-3f97a26e3311). These files are used by Tigera operator:
     - `modsecdefault.conf`
     - `crs-setup.conf`
 
@@ -274,7 +274,7 @@ curl -O https://raw.githubusercontent.com/lsgroup/SmartReverseProxy/master/modse
 curl https://raw.githubusercontent.com/coreruleset/coreruleset/v3.3/dev/crs-setup.conf.example > crs-setup.conf
 ```
 
-3. If you wish to customize settings on default included rules, please see `.example` files for guidance. You must save these files without the .example extension if you wish for these changes to take effect.
+3. If you wish to customize settings on default included rules, see `.example` files for guidance. You must save these files without the .example extension if you wish for these changes to take effect.
 
 4. Go to my-ruleset folder where your core rules set files are located, create a ConfigMap containing all the files downloaded into your new directory and replace the existing rule set with it.
 
